# hackods-final

./: README.md  ai-log_template_bladerunners.md  declaratoria_IA.md  pyproject.toml
dashboard/: _quarto.yml  custom.scss  index.qmd  index.quarto_ipynb  index.quarto_ipynb_2  pyproject.toml  report_utils.py
datos/: metadata.md
datos/processed/: brecha_genero_estados.csv  coeficientes_modelo.csv  correlaciones_abandono.csv  datos_estados.csv  matriz_correlacion.csv  resumen_modelos.csv  serie_temporal.csv  zonas_criticas.csv
docs/: metadata.md
docs/index_files/libs/bootstrap/: bootstrap-4795d4001bae664f1be642ae1e43eb5c.min.css  bootstrap-4a411eec649ca33c0075831448970ca1.min.css  bootstrap-dark-06186a8135d31c7810ed385f004831d8.min.css  bootstrap-dark-1d46da8446d11b63579d4de93253d4d9.min.css
docs/reportes/: reporte_dashboard_completo.xlsx  zonas_criticas.csv
notebooks/: 01_pipeline_bladerunners_python.ipynb  _quarto.yml  requirements.txt
