[project]
name = "hackods-bladerunners"
version = "0.1.0"
description = "Proyecto Bladerunners - HackODS UNAM 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "plotly>=5.18.0",
  "statsmodels>=0.14.1",
  "jupyter>=1.0.0",
  "ipykernel>=6.29.0",
  "openpyxl>=3.1.2",
  "quarto-cli>=1.6.0"
]

[tool.uv]
package = false
